-
Bug
-
Resolution: Fixed
-
P2: Important
-
None
-
6.5.8, 6.8.1, 6.9.0 Beta1
-
MacBook M1, macOS 14.4.1, Clang 15.0.0, Xcode 15; Windows 11, MSVC2019 kit
-
-
3f0261ebe (dev), 64407cc9c (6.10), 22bd1b2ba (6.9), fb4b88304 (tqtc/lts-6.8)
This appears to be related to QTBUG-125053, in that it is a regression resulting from the fix to that bug.
I have attached a minimal project. This is based on the one I attached to QTBUG-125053 but makes use of a sorted list model.
When you run it, you'll see that the list does not get populated and you get the error:
endResetModel called on SortedSoundListModel(0x60000333f4d0) without calling beginResetModel first
For Gerrit Dashboard: QTBUG-132775 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
652526,1 | QSFPM: Support source model undergoing reset during setSourceModel | tqtc/lts-6.5 | qt/tqtc-qtbase | Status: NEW | 0 | 0 |